--- a/landing/styles/style.css
+++ b/landing/styles/style.css
@@ -1,6 +1,3 @@
-/*Понравился сайт
-https://www.behance.net/gallery/79783099/v-ramkah-bazovogo-kursa-Skillbox-Ui-concept-Web?tracking_source=search_projects_recommended%7Cui%20beer
-*/
 html {
     height: 100%;
 }
@@ -23,13 +20,14 @@ body {
 .header {
     display: flex;
     min-height: 30px;
-    position: relative;
+    position: absolute;
+    width: 100%;
 }
 
 .header-fixed {
     min-height: inherit;
-    background-color: rgba(250, 225, 2);
-    position: fixed;
+/*    background-color: rgba(250, 225, 2);
+    position: fixed;*/
     display: flex;
     width: 100%;
     justify-content: center;
@@ -55,7 +53,7 @@ body {
 a{
     width: 300px;
     text-align: left;
-    background-color: rgb(250, 225, 2);
+    background-color: rgba(0, 128, 0, 0.7);
     border: 0;
     outline: 0;
     color: white;
@@ -66,14 +64,15 @@ a{
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    transition: 1s;
 }
 a.active{
     width: 300px;
     text-align: left;
-    background-color: #00FF00;
+    background-color: rgba(255, 255, 255, 0.8);
     border: 0;
     outline: 0;
-    color: white;
+    color: black;
     font-family: comic sans ms;
     font-size: 18px;
     text-align: center;
@@ -86,6 +85,13 @@ a.active{
 .header-button > a:not(:last-child){
 	border-right: 1px solid white;	
 }
+.header-button :last-child{
+    border-radius: 0 15px 15px 0;  
+}
+.header-button :first-child{
+    border-radius: 15px 0 0 15px;  
+}
+
 
 /*.header-button > button{
 	margin-right: 10px;
@@ -93,18 +99,18 @@ a.active{
 }*/
 
 #block_image {
-    background-image: url('../hops.jpg');
+    background-image: url('../image/hops.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     box-sizing: content-box;
     position: sticky;
-    top: 30px;
+    top: 0;
     left: 0;
     z-index: -1;
     width: 100%;
     height: auto;
-    min-height: 600px;
+    min-height: 500px;
     justify-content: center;
     display: flex;
 }
@@ -116,6 +122,7 @@ a.active{
     font-size: 50px;
     font-family: comic sans ms;
 }
+
 .author-content{
 	display: flex;
 	justify-content: center;
@@ -125,6 +132,7 @@ a.active{
 	display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     border-radius: 80px;
     width: 600px;
     height: 150px;
@@ -133,6 +141,54 @@ a.active{
     margin-bottom: 50px;
     background-color: white;
 }
+#authorLogin{
+    padding: 20px;
+}
+#authorText{
+    color: rgb(0, 128, 0);
+    font-family: comic sans ms;
+    margin-top: -15px;
+    font-weight: bold;
+    font-size: 20px;
+}
+input{
+    background-color: rgba(250, 225, 2, 0.5);
+    color: black;
+    font-family: comic sans ms;
+    font-size: 15px;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 25px;
+    transition: 1s;
+}
+#authorButton{
+    background-color: rgba(0, 128, 0, 0.7);
+    color: white;
+    font-family: comic sans ms;
+    font-size: 15px;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 25px;
+    transition: 1s;
+}
+#authorButton.active{
+    background-color: rgba(255, 255, 255, 0.8);
+    color: black;
+    font-family: comic sans ms;
+    font-size: 15px;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 25px;
+    transition: 1s;
+    box-shadow: 0 0 15px black;
+}
+
 
 
 
@@ -151,7 +207,7 @@ a.active{
 	display: flex;
 	flex-direction: column;
 }
-.description{
+.cartBox{
     display: flex;
     justify-content: center;  
 }
@@ -161,7 +217,7 @@ a.active{
 
 
 #cart1{
-	background-image: url('../heinekenlogo.jpg');
+	background-image: url('../image/heinekenlogo.jpg');
 	background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -171,7 +227,7 @@ a.active{
 }
 
 #cart2{
-	background-image: url('../coronalogo.png');
+	background-image: url('../image/coronalogo.png');
 	background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -180,7 +236,17 @@ a.active{
     width: 100px;
 }
 
-#description1{
+#cart3{
+    background-image: url('../image/efeslogo.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 10px 10px 10px 50px;
+    border-radius: 20px;
+    width: 100px;
+}
+
+.description{
 	margin: 10px 10px 10px 10px;
 	background-color: rgba(250, 225, 2, 0.5);
 	border-radius: 20px; 
@@ -188,17 +254,21 @@ a.active{
     align-items: center;
     display: flex;
     width: 700px;
+    padding: 10px;
+    box-shadow: 0 0 15px rgba(250, 225, 2, 0.5);
 }
-
-#description2{
-	margin: 10px 10px 10px 10px;
-	background-color: rgba(250, 225, 2, 0.5);
-	border-radius: 20px;
-	text-align: center;
+.descriptionS{
+    margin: 10px 10px 10px 10px;
+    background-color: rgba(250, 225, 2, 0.5);
+    border-radius: 20px; 
+    text-align: center;
     align-items: center;
     display: flex;
-    width: 700px;
+    width: 1200px;
+    padding: 10px;
+    box-shadow: 0 0 15px rgba(250, 225, 2, 0.5);
 }
+
 
 .film{
     display: flex;
@@ -215,13 +285,9 @@ a.active{
     justify-content: center;
     
 }
-.coronaContainer{
-    display: flex;
-    align-items: center;
-}
 .coronaExtra > div {
     margin-right: 50px;
-    background-image: url('../hotpngcorona.png');
+    background-image: url('../image/hotpngcorona.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -237,7 +303,7 @@ a.active{
 }
 .haniken > div {
     margin-right: 50px;
-    background-image: url('../hotpngheineken.png');
+    background-image: url('../image/hotpngheineken.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -247,87 +313,343 @@ a.active{
     max-height: 300px;
 }
 
-#separator{
+.efes{
     display: flex;
-    justify-content: center;
     align-items: center;
-    background-color: rgba(0, 216, 105, 1);
-    height: 50px;
-
 }
+.efes > div {
+    margin-right: 50px;
+    background-image: url('../image/efes.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-width: 300px;
+    min-height: 370px;
+    max-width: 300px;
+    max-height: 300px;
+}
+
 .separator{
     text-align: center;
     font-size: 25px;
     font-weight: bold;
-	background-color: rgba(250, 225, 2, 1);
-    border-radius: 25px;
+	background-color: rgba(0, 128, 0, 0.8);
     height: 50px;
-    width: 95%;;
+    width: 100%;
     align-items: center;
     display: flex;
     justify-content: center;
-
+    color: white;
 }
 
 .image-block{
 	display: flex;
-    justify-content: space-around;
-    padding: 10px;
+    /*justify-content: space-around;*/
+/*    padding: 10px;*/
     flex-wrap: wrap;
-    /*background-color: rgba(250, 225, 2, 0.5)*/
+/*    background-color: rgba(250, 225, 2, 0.5)*/
+    width: 100%;
+    height: auto;
+    position: relative;
+    overflow: hidden;
 }
 
+.imageseparator{
+    overflow: hidden;
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: auto;
+}
 
 .image{
-	padding: 10px;
+    /*padding: 10px;
 	margin: 10px;
 	min-width: 300px;
 	min-height: 300px;
 	max-width: 300px;
-	max-height: 300px;
+	max-height: 300px;*/
+    display: inline-block;
+    position: relative;
+    /*border-radius: 30px;*/
+}
+.imageseparator > div{
+    transition: 0.7s;
+}
+.image:hover{
+    transform: scale(1.1);
+
 }
 
 #image1{
-	background-image: url('../boobs.jpg');
+	background-image: url('../image/boobs.jpg');
 	background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 30px;
+    flex-grow: 3;
+    min-width: 35%;
+    min-height: 350px;   
 }
 #image2{
-	background-image: url('../beerbotle.jpg');
+	background-image: url('../image/heineken1.jpg');
 	background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 30px;
+    background-size: cover; 
+    flex-grow: 2;
+    min-width: 15%;
+    min-height: 100px;  
 }
 #image3{
-	background-image: url('../meat.jpg');
+	background-image: url('../image/meat.jpg');
 	background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 30px;
+    flex-grow: 1;
+    min-width: 35%;
+    min-height: 300px;
 }
 #image4{
-	background-image: url('../beerbotle.jpg');
+	background-image: url('../image/corona1.jpg');
 	background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 30px;
+    flex-grow: 2;
+    min-width: 15%;
+    min-height: 100px;
+}
+#image5{
+    background-image: url('../image/efes1.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex-grow: 2;
+    min-width: 15%;
+    min-height: 100px;
+}
+#image6{
+    background-image: url('../image/boobs1.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex-grow: 3;
+    min-width: 35%;
+    min-height: 350px;   
+}
+#image7{
+    background-image: url('../image/heineken2.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex-grow: 2;
+    min-width: 15%;
+    min-height: 100px;
+}
+#image8{
+    background-image: url('../image/meat1.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex-grow: 1;
+    min-width: 35%;
+    min-height: 300px;
+}
+#image9{
+    background-image: url('../image/meat2.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex-grow: 1;
+    min-width: 35%;
+    min-height: 300px;
+}
+#image10{
+    background-image: url('../image/corona2.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex-grow: 2;
+    min-width: 15%;
+    min-height: 100px;
+}
+#image11{
+    background-image: url('../image/boobs2.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex-grow: 3;
+    min-width: 35%;
+    min-height: 350px;   
+}
+#image12{
+    background-image: url('../image/efes2.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex-grow: 2;
+    min-width: 15%;
+    min-height: 100px;
+}
+
+
+
+#Boooooobs{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 .image-slider{
     display: flex;
     align-items: center;
     justify-content: center;
 }
+#button{
+    display: flex;
+    justify-content: space-between;
+    width: 900px;
+    position: absolute;
 
+}
+#image{
+    width: 670px;
+    height: 500px;
+    border-radius: 25px;
+    margin: 10px;
+}
+#button > button{
+    background-color: rgba(0, 128, 0, 0.7);
+    color: white;
+    font-family: comic sans ms;
+    font-size: 18px;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 25px;
+    transition: 1s;
+}
+#button > button.active{
+    background-color: rgba(255, 255, 255, 0.8);
+    color: black;
+    font-family: comic sans ms;
+    font-size: 18px;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 25px;
+    transition: 1s;
+    box-shadow: 0 0 15px black;
+}
 
+.footer {
+    height: 0;
+    width: 100%;
+    padding: 20px;
+    
+    color: #fff;
+    background-color: #333;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transition: 1s ease-in-out;
+}
+.footer.active {
+    height: 210px;
+    width: 100%;
+    padding: 20px;
 
+    color: #fff;
+    background-color: #333;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transition: 1s ease-in-out;
+    z-index: 30;
+    opacity: 0.5
+}
+#deleteFooter{
+    cursor: pointer;
+    right: 5%;
+    position: absolute;
+    font-size: 18px;
+}
+.footerTitle{
+    display: flex;
+}
+    .footerTitle > p {
+        margin: 0;
+        padding: 10px;
+    }
+    .iconTitleL{
+        background-image: url('../image/iboobs.png');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;  
+        height: 40px;
+        width: 40px;
+        margin-right: 10px; 
+    }
+    .iconTitleR{
+        background-image: url('../image/ibeer.png');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;  
+        height: 40px;
+        width: 40px;
+    }
 
-
-
-
-
+.footerContact{
+    display: flex;
+    flex-direction: column;
+}
+    .footerContact > div{
+        display: flex;
+    }
+    .footerContact > p {
+        margin: 0;
+        padding: 10px;
+    }
+        .iconAddres{
+            background-image: url('../image/iaddres.png');
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;  
+            height: 40px;
+            width: 40px;
+            margin-right: 10px;
+        }
+        .addres > p {
+            margin: 0;
+            padding: 10px;
+        }
+        .iconTell{
+            background-image: url('../image/itel.png');
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;  
+            height: 40px;
+            width: 40px;
+            margin-right: 10px;
+        }
+        .tellephone > p {
+            margin: 0;
+            padding: 10px;
+        }
+        .iconEmail{
+            background-image: url('../image/iemail.png');
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;  
+            height: 40px;
+            width: 40px;
+            margin-right: 10px;
+        }
+        .email > p {
+            margin: 0;
+            padding: 10px;
+        }
 
 
 
@@ -349,16 +671,8 @@ a.active{
     box-sizing: border-box;
 }
 
-.footer {
-    padding: 25px;
-    box-sizing: border-box;
-    color: #fff;
-    display: flex;
-    min-height: 400px;
-    max-height: 400px;
-    background-color: #333;
-   /* display: none;*/
-}
+
+
 
 
 
@@ -463,5 +777,37 @@ a.active{
 #up{
     height: 50px;
     width: 50px;
-    background-color: gray;
+    background-color: rgba(0, 128, 0, 0.8);
+    cursor: pointer;
+    position: fixed;
+    z-index: 1000;
+    display: inline-block;
+    transition: background-color .3s, 
+    opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: hidden;
+    bottom: 50px;
+    right: 50px;
+    background-image: url('../image/whitearrow.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 5px;
+}
+#up.show{
+    height: 50px;
+    width: 50px;
+    background-color: rgba(0, 128, 0, 0.8);
+    cursor: pointer;
+    position: fixed;
+    z-index: 1000;
+    opacity: 0.8;
+    visibility: visible;
+    bottom: 50px;
+    right: 50px;
+    background-image: url('../image/whitearrow.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 5px;
 }
