--- a/styles/style.css
+++ b/styles/style.css
@@ -22,25 +22,31 @@ body{
 	/*border: 1px solid blue;*/
 
 .header {
-    height: 70px;
+    height: 0;
     width: 100%;
     position: relative;
+;
 }
 
 .sideBar {
-    height: 0;
-    width: 100%;
+    height: 100%;
+    width: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
     transition: 0.4s ease-in-out;
     opacity: 0;
+    
+    top: 0;
+    flex-direction: column;
+    position: fixed;
+
 }  
 
 .sideBar.open {
-    height: 70px;
-    width: 100%;
+    height: 100%;
+    width: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,19 +54,21 @@ body{
     transition: 0.4s ease-in-out;
     opacity: 1;
     overflow: hidden;
+    top: 0;
 
-}
+    background-color: rgba(255,192,203, 0.7);
 
-.avatar{
-	display: flex;
 }
 
 #menuLinks{
 	display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     width: 100%;
     height: inherit;
+    flex-direction: column;
+
+    margin-top: 25px;
 }
 
 #menuLinks > a {
@@ -90,22 +98,26 @@ body{
     border-color: rgb(118, 118, 118);
     border-image: initial;
     font-size: 16px;
-  font-family: comic sans ms;
+    font-family: comic sans ms;
 
 }
 
-.avatar{
-	height: 60px;
-	width: 60px;
-	border-radius: 60px;
-	background-color: yellow;
-	margin-left: 10px;
-	font-family: comic sans ms;
-	display: flex;
-	align-items: center;
+.closeMenu{
+    background-color: #add9fe;
+    text-align: center;
+    border-radius: 14px;
+    color: black;
+    padding: 7px;
+    margin: 10px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: rgb(118, 118, 118);
+    border-image: initial;
+    font-size: 16px;
+    font-family: comic sans ms;
 }
 
-.header button {
+.downmenu button {
 	text-align: center;
     border-radius: 14px;
     background-color: #add9fe;
@@ -126,7 +138,7 @@ body{
 	align-items: center;
     display: flex;
     justify-content: center;
-    margin-top: 15px;
+
 }
 
 .addMenu {
@@ -148,7 +160,7 @@ body{
 
 
 .content{
-    margin: 70px 0 0 0;
+    
 	/*font-family: wide latin;*/
 }
 
